# strelka-wai

./: router-wai.cabal  strelka-wai.cabal
applicative-demo/: Main.hs
applicative-demo/Main/: Effect.hs
